set title of test header

--- a/src/test/index.html
+++ b/src/test/index.html
@@ -15,8 +15,7 @@
     <title>Ellipsis Mapbox GL JS Package Test</title>
 </head>
 <body onload="init()">
-    <h1>Test for Ellipsis Drive Leafletjs Package</h1>
+    <h1>Test for Ellipsis Drive MapboxGL.js Package</h1>
     <div id="map"></div>
-
 </body>
 </html>
