--- a/src/test/index.html
+++ b/src/test/index.html
@@ -11,6 +11,7 @@
     <script src="../lib/EllipsisRasterLayer.js"></script>
     <script src="../lib/EllipsisVectorLayer.js"></script>
     <script src="../lib/Ellipsis.js"></script>
+    <!-- <script src="https://github.com/ellipsis-drive-internal/mapboxgljs-package/releases/download/1.0.1/Ellipsis-Mapboxgljs-1.0.1.js"></script> -->
     <script src="script.js"></script>
     <title>Ellipsis Mapbox GL JS Package Test</title>
 </head>
