--- a/src/test/index.html
+++ b/src/test/index.html
@@ -1,21 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
-    <link href='https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.css' rel='stylesheet' />
-    <script src='https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.js'></script>
-    <script src="../lib/EllipsisApi.js"></script>
-    <script src="../lib/EllipsisRasterLayer.js"></script>
-    <script src="../lib/EllipsisVectorLayer.js"></script>
-    <script src="../lib/Ellipsis.js"></script>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <link
+      href="https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.css"
+      rel="stylesheet"
+    />
+    <script src="https://api.mapbox.com/mapbox-gl-js/v2.5.1/mapbox-gl.js"></script>
+    <script src="https://github.com/ellipsis-drive-internal/mapboxgljs-package/releases/download/1.0.1/Ellipsis-Mapboxgljs-1.0.1.js"></script>
     <script src="script.js"></script>
     <title>Ellipsis Mapbox GL JS Package Test</title>
-</head>
-<body onload="init()">
+  </head>
+  <body onload="init()">
     <h1>Test for Ellipsis Drive MapboxGL.js Package</h1>
     <div id="map"></div>
-</body>
+  </body>
 </html>
